@@ -136,7 +136,7 @@
                           />
                           <input type="hidden"
                             name="return_url"
-                            tal:attributes="value string:${context/absolute_url}/@@object_lookup?filter=${filter_string}&show_add=${show_add}&startpath=${startpath}&selected_path=${selected_path}"
+                            tal:attributes="value string:${context/absolute_url}/@@object_lookup%3Ffilter%3D${filter_string}%26show_add%3D${show_add}%26startpath%3D${startpath}"
                           />
                         </form>
                       </div>
